--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
             'coroutine': '1.3.7',
             'espresso': '3.2.0',
             'glide': '4.10.0',
-            'gradle': '4.2.0-beta03',
+            'gradle': '7.0.0-alpha04',
             'junit' : '4.12',
             'junitImplementation' : '1.1.1',
             'kotlin': '1.4.21',
