--- a/.travis.yml
+++ b/.travis.yml
@@ -1,43 +1,27 @@
 language: android
 sudo: required
-jdk: oraclejdk11
 
-env:
-  global:
-  - ANDROID_API_LEVEL=30
-  - ANDROID_BUILD_TOOLS_VERSION=30.0.2
-  - ANDROID_ABI=armeabi-v7a
+dist: trusty
 
 android:
   components:
     - tools
     - platform-tools
-    - tools
+    - build-tools-30.0.2
+    - android-30
     - extra-android-m2repository
-  licenses:
-    - 'android-sdk-preview-license-52d11cd2'
-    - 'android-sdk-license-.+'
-    - 'google-gdk-license-.+'
 
+jdk:
+  - openjdk11
+
+notifications:
+  email: false
 before_install:
-  - touch $HOME/.android/repositories.cfg
-  - yes | sdkmanager "platforms;android-28"
-  - yes | sdkmanager "build-tools;30.0.2"
-
-before_cache:
-  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
-  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
-
-cache:
-  directories:
-  - $HOME/.gradle/caches/
-  - $HOME/.gradle/wrapper/
-  - $HOME/.android/build-cache
-
-before_script:
-  - chmod +x gradlew
+ - chmod +x gradlew
 
 script:
-  - ./gradlew clean build
-  - ./gradlew test
-
+  - ./gradlew clean
+  - ./gradlew assembleRelease
+#  - ./gradlew assemble check
+#  - ./gradlew checkstyle
+#  - ./gradlew build
