--- a/.github/workflows/android.yaml
+++ b/.github/workflows/android.yaml
@@ -1,10 +1,25 @@
-name: Build
-on: [pull_request, push]
+name: build
+
+on:
+  push:
+    branches: [ main ] 
+  pull_request:
+    branches: [ main ]
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout the code
-        uses: actions/checkout@v2
-      - name: Build the app
-        run: ./gradlew build
+    - uses: actions/checkout@v2
+    - name: Set up JDK 11
+      uses: actions/setup-java@v1
+      with:
+        java-version: 11
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+    - name: Check Lint
+      run: sudo ./gradlew lintDebug
+    - name: Run tests
+      run: sudo ./gradlew test
+    - name: Build with Gradle
+      run: sudo ./gradlew build
