--- a/.github/workflows/android.yaml
+++ b/.github/workflows/android.yaml
@@ -9,6 +9,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    timeout-minutes: 30
+    
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 11
