--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ android:
     - build-tools-30.0.2
     - android-30
     - extra-android-m2repository
+    - extra-google-m2repository
   licenses:
     - 'android-sdk-preview-license-.+'
     - 'android-sdk-license-.+'
