--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,10 @@ android {
         useIR = true
     }
 
+    lintOptions {
+        abortOnError false
+    }
+
     composeOptions {
         kotlinCompilerVersion "${versions.kotlinCompilerVersion}"
         kotlinCompilerExtensionVersion "${versions.compose}"
