--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,8 @@
 buildscript {
     ext.versions = [
             'cardView': '1.0.0',
-            'compose': '1.0.0-alpha09',
+            'compose': '1.0.0-alpha10',
+            'nav_compose': '1.0.0-alpha05',
             'constraintLayout' : '1.1.3',
             'coroutine': '1.3.7',
             'espresso': '3.2.0',
@@ -27,13 +28,14 @@ buildscript {
                     'composeRuntime': "androidx.compose.runtime:runtime:${versions.compose}",
                     'core': "androidx.compose.ui:ui:${versions.compose}",
                     'foundation': "androidx.compose.foundation:foundation:${versions.compose}",
-                    'tooling': "androidx.compose.ui:ui-tooling:${versions.compose}",
+                    'tooling': "androidx.ui:ui-tooling:${versions.compose}",
                     'layout': "androidx.compose.foundation:foundation-layout:${versions.compose}",
                     'material': "androidx.compose.material:material:${versions.compose}",
                     'materialRipple': "androidx.compose.material:material-ripple:${versions.compose}",
                     'savedInstanceState': "androidx.compose.runtime:runtime-saved-instance-state:${versions.compose}",
                     'uiTest': "androidx.compose.ui:ui-test-junit4:${versions.compose}",
-                    'uiLiveData': "androidx.compose.runtime:runtime-livedata:${versions.compose}"
+                    'uiLiveData': "androidx.compose.runtime:runtime-livedata:${versions.compose}",
+                    'navigation': "androidx.navigation:navigation-compose:${versions.nav_compose}"
             ],
             'constraintLayout': "androidx.constraintlayout:constraintlayout:${versions.constraintLayout}",
             'coroutine': [
