--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
         <activity android:name=".text.SimpleTextAct"/>
         <activity android:name=".material.AlertDialogAct"/>
+        <activity android:name=".material.NavigationDrawerAct"/>
         <activity android:name=".image.ImageAct"/>
         <activity android:name=".animation.Animation1Act"/>
         <activity android:name=".navigation.SimpleNavigationAct"/>
