--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,19 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.versions = [
+            'activity_compose': '1.3.0-alpha03',
             'cardView': '1.0.0',
-            'compose': '1.0.0-alpha10',
+            'compose': '1.0.0-beta01',
             'nav_compose': '1.0.0-alpha05',
             'constraintLayout' : '1.1.3',
             'coroutine': '1.3.7',
             'espresso': '3.2.0',
             'glide': '4.10.0',
-            'gradle': '7.0.0-alpha04',
+            'gradle': '7.0.0-alpha08',
             'junit' : '4.12',
             'junitImplementation' : '1.1.1',
-            'kotlin': '1.4.21',
-            'kotlinCompilerVersion': '1.4.21',
+            'kotlin': '1.4.30',
+            'kotlinCompilerVersion': '1.4.30',
             'ktx': '1.1.0',
             'ktxSupport': '2.2.0',
             'lifecycle':'2.2.0',
@@ -22,6 +23,7 @@ buildscript {
             'testRunner': '1.2.0',
     ]
     ext.deps = [
+            'activityCompose': "androidx.activity:activity-compose:${versions.activity_compose}",
             'cardView': "androidx.cardview:cardview:${versions.cardView}",
             'compose': [
                     'composeComplier': "androidx.compose:compose-compiler:${versions.compose}",
